clusters/52poke/default/klinklang/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klinklang
  namespace: default
spec:
  selector:
    matchLabels:
      app: klinklang
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        rollout.52poke.com/config-revision: "2026-08-03-inazuma"
      labels:
        app: klinklang
    spec:
      containers:
      - command:
        - npm
        - run
        - serve
        image: ghcr.io/52poke/klinklang:latest
        imagePullPolicy: Always
        name: klinklang
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /app/config.json
          name: klinklang-config
          readOnly: true
          subPath: config.json
        - mountPath: /app/workflow.yml
          name: klinklang-config
          readOnly: true
          subPath: workflow.yml
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          name: klinklang
        name: klinklang-config
