clusters/52poke/default/klinklang/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klinklang
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: klinklang
  type: ClusterIP
